fix: update the loan_book endpoint to account for changes on loan book

--- a/notebook_model.ipynb
+++ b/notebook_model.ipynb
@@ -22413,7 +22413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 151,
+      "execution_count": 154,
       "metadata": {},
       "outputs": [
         {
@@ -22455,17 +22455,17 @@
               "    <tr>\n",
               "      <th>Opening Balance</th>\n",
               "      <td>2,800,000.00</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>3,289,115.11</td>\n",
+              "      <td>3,824,050.50</td>\n",
+              "      <td>4,399,984.20</td>\n",
+              "      <td>4,790,277.65</td>\n",
+              "      <td>5,114,133.71</td>\n",
+              "      <td>5,444,901.73</td>\n",
+              "      <td>5,772,784.17</td>\n",
+              "      <td>6,268,279.00</td>\n",
+              "      <td>6,870,350.90</td>\n",
+              "      <td>7,710,948.73</td>\n",
+              "      <td>8,584,292.66</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>New Disbursements</th>\n",
@@ -22514,58 +22514,58 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Closing Balance</th>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>3,289,115.11</td>\n",
+              "      <td>3,824,050.50</td>\n",
+              "      <td>4,399,984.20</td>\n",
+              "      <td>4,790,277.65</td>\n",
+              "      <td>5,114,133.71</td>\n",
+              "      <td>5,444,901.73</td>\n",
+              "      <td>5,772,784.17</td>\n",
+              "      <td>6,268,279.00</td>\n",
+              "      <td>6,870,350.90</td>\n",
+              "      <td>7,710,948.73</td>\n",
+              "      <td>8,584,292.66</td>\n",
+              "      <td>9,326,942.99</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "                      Jan-2023    Feb-2023    Mar-2023    Apr-2023  \\\n",
-              "Opening Balance   2,800,000.00         NaN         NaN         NaN   \n",
-              "New Disbursements   490,000.00  592,000.00  706,000.00  610,000.00   \n",
-              "Repayments           -1,175.68 -147,188.58 -317,967.20 -508,839.54   \n",
-              "Interest Income         290.78   90,123.97  187,900.90  289,132.99   \n",
-              "Closing Balance            NaN         NaN         NaN         NaN   \n",
+              "                      Jan-2023     Feb-2023     Mar-2023     Apr-2023  \\\n",
+              "Opening Balance   2,800,000.00 3,289,115.11 3,824,050.50 4,399,984.20   \n",
+              "New Disbursements   490,000.00   592,000.00   706,000.00   610,000.00   \n",
+              "Repayments           -1,175.68  -147,188.58  -317,967.20  -508,839.54   \n",
+              "Interest Income         290.78    90,123.97   187,900.90   289,132.99   \n",
+              "Closing Balance   3,289,115.11 3,824,050.50 4,399,984.20 4,790,277.65   \n",
               "\n",
-              "                     May-2023    Jun-2023    Jul-2023      Aug-2023  \\\n",
-              "Opening Balance           NaN         NaN         NaN           NaN   \n",
-              "New Disbursements  622,000.00  712,000.00  808,000.00  1,010,000.00   \n",
-              "Repayments        -652,426.72 -786,245.14 -933,728.88 -1,013,823.54   \n",
-              "Interest Income    354,282.78  405,013.17  453,611.32    499,318.37   \n",
-              "Closing Balance           NaN         NaN         NaN           NaN   \n",
+              "                      May-2023     Jun-2023     Jul-2023      Aug-2023  \\\n",
+              "Opening Balance   4,790,277.65 5,114,133.71 5,444,901.73  5,772,784.17   \n",
+              "New Disbursements   622,000.00   712,000.00   808,000.00  1,010,000.00   \n",
+              "Repayments         -652,426.72  -786,245.14  -933,728.88 -1,013,823.54   \n",
+              "Interest Income     354,282.78   405,013.17   453,611.32    499,318.37   \n",
+              "Closing Balance   5,114,133.71 5,444,901.73 5,772,784.17  6,268,279.00   \n",
               "\n",
               "                       Sep-2023      Oct-2023      Nov-2023      Dec-2023  \n",
-              "Opening Balance             NaN           NaN           NaN           NaN  \n",
+              "Opening Balance    6,268,279.00  6,870,350.90  7,710,948.73  8,584,292.66  \n",
               "New Disbursements  1,160,000.00  1,450,000.00  1,585,000.00  1,585,000.00  \n",
               "Repayments        -1,133,754.10 -1,277,710.73 -1,518,023.60 -1,792,873.69  \n",
               "Interest Income      575,826.00    668,308.56    806,367.53    950,524.03  \n",
-              "Closing Balance             NaN           NaN           NaN           NaN  "
+              "Closing Balance    6,870,350.90  7,710,948.73  8,584,292.66  9,326,942.99  "
             ]
           },
-          "execution_count": 151,
+          "execution_count": 154,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "loan_book_df = loan_book.insert_loan_book_items(\n",
-        "    loan_book=loan_book_df, \n",
-        "    opening_balance_on_loan_book=float(opening_balances['LOAN_BOOK'].iat[0]), \n",
-        "    total_interest_income = total_interest_income,\n",
-        "    total_capital_repayments = total_capital_repayments,\n",
-        "    disbursements=new_disbursements_df['total'].reindex(new_disbursements_df['total'].index.strftime('%b-%Y'))\n",
+        "    loan_book=loan_book_df,\n",
+        "    opening_balance_on_loan_book=float(opening_balances[\"LOAN_BOOK\"].iat[0]),\n",
+        "    total_interest_income=total_interest_income,\n",
+        "    total_capital_repayments=total_capital_repayments,\n",
+        "    disbursements=helper.change_period_index_to_strftime(new_disbursements_df[\"total\"]),\n",
         ")\n",
         "loan_book_df"
       ]
