fix: update intermediate calculations endpoint to take into account changes to models

--- a/notebook_aws.ipynb
+++ b/notebook_aws.ipynb
@@ -2,11 +2,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
         "import pandas as pd\n",
+        "import numpy as np\n",
+        "import importlib\n",
         "import awswrangler as wr\n",
         "from application.modeling import helper\n",
         "from application.modeling.constants import MY_SESSION, S3_CLIENT, FileStage\n",
@@ -19,20 +21,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<module 'application.modeling.helper' from 'c:\\\\Users\\\\HP\\\\Desktop\\\\Claxon\\\\Budgeting\\\\manage-tenants-template\\\\application\\\\modeling\\\\helper.py'>"
+            ]
+          },
+          "execution_count": 17,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "importlib.reload(helper)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
         "bucket_name = \"zimnat-budgeting\"\n",
         "tenant_name = bucket_name\n",
-        "project_id = 1\n",
+        "project_id = 2\n",
         "VALUATION_DATE = \"2023-01\"\n",
         "MONTHS_TO_FORECAST = 12"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -56,352 +78,75 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>b2b_disbursements</th>\n",
-              "      <th>sme_disbursements</th>\n",
-              "      <th>consumer_ssb_disbursements</th>\n",
-              "      <th>consumer_pvt_disbursements</th>\n",
-              "      <th>total</th>\n",
+              "      <th>effective_date</th>\n",
+              "      <th>institution</th>\n",
+              "      <th>nominal_amount</th>\n",
+              "      <th>interest_rate</th>\n",
+              "      <th>tenure</th>\n",
+              "      <th>repayment_frequency</th>\n",
+              "      <th>frequency</th>\n",
+              "      <th>method</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>2023-01</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>360,000.00</td>\n",
-              "      <td>48,000.00</td>\n",
-              "      <td>60,000.00</td>\n",
-              "      <td>490,000.00</td>\n",
+              "      <th>0</th>\n",
+              "      <td>31/12/2023</td>\n",
+              "      <td>ZIMNAT LIFE ASSURANCE</td>\n",
+              "      <td>376455</td>\n",
+              "      <td>0.06</td>\n",
+              "      <td>12</td>\n",
+              "      <td>Monthly (P+I)</td>\n",
+              "      <td>12</td>\n",
+              "      <td>reducing_balance</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>2023-02</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>432,000.00</td>\n",
-              "      <td>60,000.00</td>\n",
-              "      <td>75,000.00</td>\n",
-              "      <td>592,000.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2023-03</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>480,000.00</td>\n",
-              "      <td>72,000.00</td>\n",
-              "      <td>108,000.00</td>\n",
-              "      <td>706,000.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2023-04</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>360,000.00</td>\n",
-              "      <td>80,000.00</td>\n",
-              "      <td>120,000.00</td>\n",
-              "      <td>610,000.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2023-05</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>324,000.00</td>\n",
-              "      <td>96,000.00</td>\n",
-              "      <td>144,000.00</td>\n",
-              "      <td>622,000.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2023-06</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>378,000.00</td>\n",
-              "      <td>96,000.00</td>\n",
-              "      <td>162,000.00</td>\n",
-              "      <td>712,000.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2023-07</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>420,000.00</td>\n",
-              "      <td>112,000.00</td>\n",
-              "      <td>189,000.00</td>\n",
-              "      <td>808,000.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2023-08</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>595,000.00</td>\n",
-              "      <td>120,000.00</td>\n",
-              "      <td>202,500.00</td>\n",
-              "      <td>1,010,000.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2023-09</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>700,000.00</td>\n",
-              "      <td>120,000.00</td>\n",
-              "      <td>225,000.00</td>\n",
-              "      <td>1,160,000.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2023-10</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>990,000.00</td>\n",
-              "      <td>120,000.00</td>\n",
-              "      <td>225,000.00</td>\n",
-              "      <td>1,450,000.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2023-11</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>1,125,000.00</td>\n",
-              "      <td>120,000.00</td>\n",
-              "      <td>225,000.00</td>\n",
-              "      <td>1,585,000.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2023-12</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>1,125,000.00</td>\n",
-              "      <td>120,000.00</td>\n",
-              "      <td>225,000.00</td>\n",
-              "      <td>1,585,000.00</td>\n",
+              "      <th>1</th>\n",
+              "      <td>06/05/2024</td>\n",
+              "      <td>MASAWARA</td>\n",
+              "      <td>5613</td>\n",
+              "      <td>0.06</td>\n",
+              "      <td>12</td>\n",
+              "      <td>Monthly (P+I)</td>\n",
+              "      <td>12</td>\n",
+              "      <td>reducing_balance</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "         b2b_disbursements  sme_disbursements  consumer_ssb_disbursements  \\\n",
-              "2023-01          10,000.00         360,000.00                   48,000.00   \n",
-              "2023-02          10,000.00         432,000.00                   60,000.00   \n",
-              "2023-03          10,000.00         480,000.00                   72,000.00   \n",
-              "2023-04          10,000.00         360,000.00                   80,000.00   \n",
-              "2023-05          10,000.00         324,000.00                   96,000.00   \n",
-              "2023-06          10,000.00         378,000.00                   96,000.00   \n",
-              "2023-07          10,000.00         420,000.00                  112,000.00   \n",
-              "2023-08          10,000.00         595,000.00                  120,000.00   \n",
-              "2023-09          10,000.00         700,000.00                  120,000.00   \n",
-              "2023-10          10,000.00         990,000.00                  120,000.00   \n",
-              "2023-11          10,000.00       1,125,000.00                  120,000.00   \n",
-              "2023-12          10,000.00       1,125,000.00                  120,000.00   \n",
+              "  effective_date            institution  nominal_amount  interest_rate  \\\n",
+              "0     31/12/2023  ZIMNAT LIFE ASSURANCE          376455           0.06   \n",
+              "1     06/05/2024              MASAWARA             5613           0.06   \n",
               "\n",
-              "         consumer_pvt_disbursements        total  \n",
-              "2023-01                   60,000.00   490,000.00  \n",
-              "2023-02                   75,000.00   592,000.00  \n",
-              "2023-03                  108,000.00   706,000.00  \n",
-              "2023-04                  120,000.00   610,000.00  \n",
-              "2023-05                  144,000.00   622,000.00  \n",
-              "2023-06                  162,000.00   712,000.00  \n",
-              "2023-07                  189,000.00   808,000.00  \n",
-              "2023-08                  202,500.00 1,010,000.00  \n",
-              "2023-09                  225,000.00 1,160,000.00  \n",
-              "2023-10                  225,000.00 1,450,000.00  \n",
-              "2023-11                  225,000.00 1,585,000.00  \n",
-              "2023-12                  225,000.00 1,585,000.00  "
+              "   tenure repayment_frequency  frequency            method  \n",
+              "0      12      Monthly (P+I)          12  reducing_balance  \n",
+              "1      12      Monthly (P+I)          12  reducing_balance  "
             ]
           },
-          "execution_count": 13,
+          "execution_count": 24,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "file_stage = FileStage.intermediate\n",
-        "new_disbursements_df = wr.s3.read_parquet(\n",
-        "    f\"s3://{bucket_name}/project_{project_id}/{file_stage.value}/new_disbursements_df.parquet\",\n",
+        "file_stage = FileStage.raw\n",
+        "details_of_new_short_term_borrowing = wr.s3.read_parquet(\n",
+        "    f\"s3://{bucket_name}/project_{project_id}/{file_stage.value}/details_of_new_short_term_borrowing.parquet\",\n",
         "    boto3_session=MY_SESSION,\n",
         ")\n",
-        "new_disbursements_df"
+        "\n",
+        "\n",
+        "details_of_new_short_term_borrowing"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 20,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "Index(['2023-01', '2023-02', '2023-03', '2023-04', '2023-05', '2023-06',\n",
-              "       '2023-07', '2023-08', '2023-09', '2023-10', '2023-11', '2023-12'],\n",
-              "      dtype='string')"
-            ]
-          },
-          "execution_count": 10,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "new_disbursements_df.index"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 15,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>b2b_disbursements</th>\n",
-              "      <th>sme_disbursements</th>\n",
-              "      <th>consumer_ssb_disbursements</th>\n",
-              "      <th>consumer_pvt_disbursements</th>\n",
-              "      <th>total</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>Jan-2023</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>360,000.00</td>\n",
-              "      <td>48,000.00</td>\n",
-              "      <td>60,000.00</td>\n",
-              "      <td>490,000.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Feb-2023</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>432,000.00</td>\n",
-              "      <td>60,000.00</td>\n",
-              "      <td>75,000.00</td>\n",
-              "      <td>592,000.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Mar-2023</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>480,000.00</td>\n",
-              "      <td>72,000.00</td>\n",
-              "      <td>108,000.00</td>\n",
-              "      <td>706,000.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Apr-2023</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>360,000.00</td>\n",
-              "      <td>80,000.00</td>\n",
-              "      <td>120,000.00</td>\n",
-              "      <td>610,000.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>May-2023</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>324,000.00</td>\n",
-              "      <td>96,000.00</td>\n",
-              "      <td>144,000.00</td>\n",
-              "      <td>622,000.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Jun-2023</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>378,000.00</td>\n",
-              "      <td>96,000.00</td>\n",
-              "      <td>162,000.00</td>\n",
-              "      <td>712,000.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Jul-2023</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>420,000.00</td>\n",
-              "      <td>112,000.00</td>\n",
-              "      <td>189,000.00</td>\n",
-              "      <td>808,000.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Aug-2023</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>595,000.00</td>\n",
-              "      <td>120,000.00</td>\n",
-              "      <td>202,500.00</td>\n",
-              "      <td>1,010,000.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Sep-2023</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>700,000.00</td>\n",
-              "      <td>120,000.00</td>\n",
-              "      <td>225,000.00</td>\n",
-              "      <td>1,160,000.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Oct-2023</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>990,000.00</td>\n",
-              "      <td>120,000.00</td>\n",
-              "      <td>225,000.00</td>\n",
-              "      <td>1,450,000.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Nov-2023</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>1,125,000.00</td>\n",
-              "      <td>120,000.00</td>\n",
-              "      <td>225,000.00</td>\n",
-              "      <td>1,585,000.00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Dec-2023</th>\n",
-              "      <td>10,000.00</td>\n",
-              "      <td>1,125,000.00</td>\n",
-              "      <td>120,000.00</td>\n",
-              "      <td>225,000.00</td>\n",
-              "      <td>1,585,000.00</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "          b2b_disbursements  sme_disbursements  consumer_ssb_disbursements  \\\n",
-              "Jan-2023          10,000.00         360,000.00                   48,000.00   \n",
-              "Feb-2023          10,000.00         432,000.00                   60,000.00   \n",
-              "Mar-2023          10,000.00         480,000.00                   72,000.00   \n",
-              "Apr-2023          10,000.00         360,000.00                   80,000.00   \n",
-              "May-2023          10,000.00         324,000.00                   96,000.00   \n",
-              "Jun-2023          10,000.00         378,000.00                   96,000.00   \n",
-              "Jul-2023          10,000.00         420,000.00                  112,000.00   \n",
-              "Aug-2023          10,000.00         595,000.00                  120,000.00   \n",
-              "Sep-2023          10,000.00         700,000.00                  120,000.00   \n",
-              "Oct-2023          10,000.00         990,000.00                  120,000.00   \n",
-              "Nov-2023          10,000.00       1,125,000.00                  120,000.00   \n",
-              "Dec-2023          10,000.00       1,125,000.00                  120,000.00   \n",
-              "\n",
-              "          consumer_pvt_disbursements        total  \n",
-              "Jan-2023                   60,000.00   490,000.00  \n",
-              "Feb-2023                   75,000.00   592,000.00  \n",
-              "Mar-2023                  108,000.00   706,000.00  \n",
-              "Apr-2023                  120,000.00   610,000.00  \n",
-              "May-2023                  144,000.00   622,000.00  \n",
-              "Jun-2023                  162,000.00   712,000.00  \n",
-              "Jul-2023                  189,000.00   808,000.00  \n",
-              "Aug-2023                  202,500.00 1,010,000.00  \n",
-              "Sep-2023                  225,000.00 1,160,000.00  \n",
-              "Oct-2023                  225,000.00 1,450,000.00  \n",
-              "Nov-2023                  225,000.00 1,585,000.00  \n",
-              "Dec-2023                  225,000.00 1,585,000.00  "
-            ]
-          },
-          "execution_count": 15,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "helper.change_period_index_to_strftime(new_disbursements_df)"
-      ]
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
