fix: update final calculations endpoint to take into account updates to modeling

--- a/notebook_aws.ipynb
+++ b/notebook_aws.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -30,7 +30,7 @@
               "<module 'application.modeling.helper' from 'c:\\\\Users\\\\HP\\\\Desktop\\\\Claxon\\\\Budgeting\\\\manage-tenants-template\\\\application\\\\modeling\\\\helper.py'>"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -54,99 +54,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
           "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>effective_date</th>\n",
-              "      <th>institution</th>\n",
-              "      <th>nominal_amount</th>\n",
-              "      <th>interest_rate</th>\n",
-              "      <th>tenure</th>\n",
-              "      <th>repayment_frequency</th>\n",
-              "      <th>frequency</th>\n",
-              "      <th>method</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>31/12/2023</td>\n",
-              "      <td>ZIMNAT LIFE ASSURANCE</td>\n",
-              "      <td>376455</td>\n",
-              "      <td>0.06</td>\n",
-              "      <td>12</td>\n",
-              "      <td>Monthly (P+I)</td>\n",
-              "      <td>12</td>\n",
-              "      <td>reducing_balance</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>06/05/2024</td>\n",
-              "      <td>MASAWARA</td>\n",
-              "      <td>5613</td>\n",
-              "      <td>0.06</td>\n",
-              "      <td>12</td>\n",
-              "      <td>Monthly (P+I)</td>\n",
-              "      <td>12</td>\n",
-              "      <td>reducing_balance</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
             "text/plain": [
-              "  effective_date            institution  nominal_amount  interest_rate  \\\n",
-              "0     31/12/2023  ZIMNAT LIFE ASSURANCE          376455           0.06   \n",
-              "1     06/05/2024              MASAWARA             5613           0.06   \n",
-              "\n",
-              "   tenure repayment_frequency  frequency            method  \n",
-              "0      12      Monthly (P+I)          12  reducing_balance  \n",
-              "1      12      Monthly (P+I)          12  reducing_balance  "
+              "Jan-2023   2,979,866.22\n",
+              "Feb-2023   2,979,866.22\n",
+              "Mar-2023   2,979,866.22\n",
+              "Apr-2023   2,979,866.22\n",
+              "May-2023   2,979,866.22\n",
+              "Jun-2023   2,979,866.22\n",
+              "Jul-2023   2,979,866.22\n",
+              "Aug-2023   2,979,866.22\n",
+              "Sep-2023   2,979,866.22\n",
+              "Oct-2023   2,979,866.22\n",
+              "Nov-2023   2,979,366.27\n",
+              "Dec-2023   2,979,024.08\n",
+              "Name: total, dtype: float64"
             ]
           },
-          "execution_count": 24,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "file_stage = FileStage.raw\n",
-        "details_of_new_short_term_borrowing = wr.s3.read_parquet(\n",
-        "    f\"s3://{bucket_name}/project_{project_id}/{file_stage.value}/details_of_new_short_term_borrowing.parquet\",\n",
+        "file_stage = FileStage.intermediate\n",
+        "net_book_values_df = wr.s3.read_parquet(\n",
+        "    f\"s3://{bucket_name}/project_{project_id}/{file_stage.value}/net_book_values_df.parquet\",\n",
         "    boto3_session=MY_SESSION,\n",
         ")\n",
         "\n",
         "\n",
-        "details_of_new_short_term_borrowing"
+        "net_book_values_df['total']"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 20,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "code",
