--- a/notebook_aws.ipynb
+++ b/notebook_aws.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -13,57 +13,13 @@
         "from application.modeling import helper\n",
         "import os\n",
         "from application.modeling.constants import MY_SESSION, S3_CLIENT, FileStage\n",
+        "from decouple import config\n",
         "\n",
+        "import jwt\n",
         "\n",
         "pd.options.display.max_columns = None\n",
         "pd.options.display.max_rows = 100\n",
         "pd.options.display.float_format = \"{:,.2f}\".format"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'postgresql://postgres:password123@127.0.0.1:5432/microfinanceBudgeting'"
-            ]
-          },
-          "execution_count": 4,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "\"postgresql://{username}:{password}@{host}:{port}/{database}\".format(\n",
-        "    username=os.getenv(\"RDS_USERNAME\"),\n",
-        "    password=os.getenv(\"RDS_PASSWORD\"),\n",
-        "    host=os.getenv(\"RDS_HOSTNAME\"),\n",
-        "    port=os.getenv(\"RDS_PORT\"),\n",
-        "    database=os.getenv(\"RDS_DB_NAME\"),\n",
-        ")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "<module 'application.modeling.helper' from 'c:\\\\Users\\\\HP\\\\Desktop\\\\Claxon\\\\Budgeting\\\\manage-tenants-template\\\\application\\\\modeling\\\\helper.py'>"
-            ]
-          },
-          "execution_count": 3,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "importlib.reload(helper)"
       ]
     },
     {
