fix: adjust issues with users router and crud

--- a/notebook_aws.ipynb
+++ b/notebook_aws.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -21,6 +21,67 @@
         "pd.options.display.max_rows = 100\n",
         "pd.options.display.float_format = \"{:,.2f}\".format"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "JWT_SECRET = os.getenv(\"secret\")\n",
+        "JWT_ALGORITHM = os.getenv(\"algorithm\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "credentials = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoyLCJlbWFpbCI6ImN0aXppcmFpMkBnbWFpbC5jb20iLCJleHBpcmVzIjoxNjk3MDE3NTQ3LjY5NzY0ODN9.LrlBnJzxpw3CfCr5haDMq-XpvZZhr58TvlQ40i76m4A\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'user_id': 2, 'email': 'ctizirai2@gmail.com', 'expires': 1697017547.6976483}"
+            ]
+          },
+          "execution_count": 14,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "payload = jwt.decode(\n",
+        "                        credentials, JWT_SECRET, algorithms=[JWT_ALGORITHM]\n",
+        "                    )\n",
+        "\n",
+        "payload"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'ctizirai2@gmail.com'"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": []
     },
     {
       "cell_type": "code",
