feat: started working on databases

--- a/notebook_aws.ipynb
+++ b/notebook_aws.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -14,12 +14,33 @@
         "import os\n",
         "from application.modeling.constants import MY_SESSION, S3_CLIENT, FileStage\n",
         "from decouple import config\n",
+        "from application.utils import schemas\n",
         "\n",
         "import jwt\n",
         "\n",
         "pd.options.display.max_columns = None\n",
         "pd.options.display.max_rows = 100\n",
         "pd.options.display.float_format = \"{:,.2f}\".format"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'{\"title\": \"ProjectResponse\", \"type\": \"object\", \"properties\": {\"project_name\": {\"title\": \"Project Name\", \"type\": \"string\"}, \"description\": {\"title\": \"Description\", \"type\": \"string\"}, \"start_date\": {\"title\": \"Start Date\", \"type\": \"string\", \"format\": \"date\"}, \"months_to_forecast\": {\"title\": \"Months To Forecast\", \"type\": \"integer\"}, \"imtt\": {\"title\": \"Imtt\", \"type\": \"number\"}, \"tenant_id\": {\"title\": \"Tenant Id\", \"type\": \"integer\"}, \"project_id\": {\"title\": \"Project Id\", \"type\": \"integer\"}, \"user_id\": {\"title\": \"User Id\", \"type\": \"integer\"}, \"project_status\": {\"title\": \"Project Status\", \"type\": \"string\"}, \"create_at\": {\"title\": \"Create At\", \"type\": \"string\", \"format\": \"date-time\"}, \"updated_at\": {\"title\": \"Updated At\", \"type\": \"string\", \"format\": \"date-time\"}}, \"required\": [\"project_name\", \"description\", \"start_date\", \"months_to_forecast\", \"imtt\", \"tenant_id\", \"project_id\", \"user_id\", \"project_status\", \"create_at\", \"updated_at\"]}'"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "schemas.ProjectResponse.schema_json()"
       ]
     },
     {
