fix: changed all instances of valuation_date to start_date

--- a/notebook_aws.ipynb
+++ b/notebook_aws.ipynb
@@ -113,7 +113,7 @@
         "bucket_name = \"zimnat-budgeting\"\n",
         "tenant_name = bucket_name\n",
         "project_id = 2\n",
-        "VALUATION_DATE = \"2023-01\"\n",
+        "start_date = \"2023-01\"\n",
         "MONTHS_TO_FORECAST = 12"
       ]
     },
