--- a/notebook_model.ipynb
+++ b/notebook_model.ipynb
@@ -47,7 +47,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "VALUATION_DATE = \"2023-01\"\n",
+        "start_date = \"2023-01\"\n",
         "MONTHS_TO_FORECAST = 12\n",
         "IMTT = 0.01"
       ]
@@ -202,7 +202,7 @@
       ],
       "source": [
         "disbursement_parameters = pd.read_csv(\"./data_templates/disbursement_parameters.csv\", index_col=0)\n",
-        "disbursement_parameters.columns = pd.period_range(VALUATION_DATE,periods=int(disbursement_parameters.columns[-1]), freq=\"M\")\n",
+        "disbursement_parameters.columns = pd.period_range(start_date,periods=int(disbursement_parameters.columns[-1]), freq=\"M\")\n",
         "disbursement_parameters.head()"
       ]
     },
@@ -356,7 +356,7 @@
       ],
       "source": [
         "other_parameters = pd.read_csv(\"./data_templates/other_parameters.csv\", index_col=0)\n",
-        "other_parameters.columns = pd.period_range(VALUATION_DATE,periods=int(other_parameters.columns[-1]), freq=\"M\")\n",
+        "other_parameters.columns = pd.period_range(start_date,periods=int(other_parameters.columns[-1]), freq=\"M\")\n",
         "other_parameters.head()"
       ]
     },
@@ -6265,7 +6265,7 @@
       ],
       "source": [
         "capital_repayment_existing_loans = existing_loans_schedules['capital_repayments'].sum()\n",
-        "capital_repayment_existing_loans.loc[helper.generate_columns(VALUATION_DATE,MONTHS_TO_FORECAST)]"
+        "capital_repayment_existing_loans.loc[helper.generate_columns(start_date,MONTHS_TO_FORECAST)]"
       ]
     },
     {
@@ -6305,7 +6305,7 @@
       ],
       "source": [
         "interest_income_existing_loans = existing_loans_schedules['interest_payments'].sum()\n",
-        "interest_income_existing_loans.loc[helper.generate_columns(VALUATION_DATE,MONTHS_TO_FORECAST)]"
+        "interest_income_existing_loans.loc[helper.generate_columns(start_date,MONTHS_TO_FORECAST)]"
       ]
     },
     {
@@ -6479,7 +6479,7 @@
       "source": [
         "other_income_existing_loans_df = other_income.calculate_other_income_existing_loans(\n",
         "    existing_loans=existing_loans,\n",
-        "    valuation_date=VALUATION_DATE,\n",
+        "    start_date=start_date,\n",
         "    months_to_forecast=MONTHS_TO_FORECAST,\n",
         ")\n",
         "other_income_existing_loans_df"
@@ -6524,7 +6524,7 @@
         "total_interest_income = interest_income.aggregate_new_and_existing_loans_interest_income(\n",
         "    interest_income_new_disbursements_df=interest_income_new_disbursements_df,\n",
         "    interest_income_existing_loans= interest_income_existing_loans,\n",
-        "    valuation_date= VALUATION_DATE, \n",
+        "    start_date= start_date, \n",
         "    months_to_forecast= MONTHS_TO_FORECAST\n",
         ")\n",
         "total_interest_income"
@@ -6672,7 +6672,7 @@
         "    admin_fee_existing_loans=other_income_existing_loans_df['admin_fee_existing_loans'],\n",
         "    credit_insurance_fee_existing_loans=other_income_existing_loans_df['credit_insurance_fee_existing_loans'],\n",
         "    credit_insurance_fee_for_all_new_disbursements_df=credit_insurance_fee_for_all_new_disbursements, \n",
-        "    valuation_date=VALUATION_DATE, \n",
+        "    start_date=start_date, \n",
         "    months_to_forecast=MONTHS_TO_FORECAST\n",
         ")\n",
         "other_income_df"
@@ -6826,7 +6826,7 @@
       "source": [
         "depreciations_and_nbvs = depreciation.calculate_depreciations_and_nbvs(\n",
         "    details_of_assets=details_of_assets,\n",
-        "    valuation_date=VALUATION_DATE,\n",
+        "    start_date=start_date,\n",
         "    months_to_forecast=MONTHS_TO_FORECAST\n",
         ")\n",
         "depreciations_and_nbvs.keys()"
@@ -14998,7 +14998,7 @@
         "        disbursement_parameters=disbursement_parameters,\n",
         "        other_parameters = other_parameters, \n",
         "        months_to_forecast=MONTHS_TO_FORECAST,\n",
-        "        valuation_date=VALUATION_DATE,\n",
+        "        start_date=start_date,\n",
         "    )\n",
         ")\n",
         "salaries_and_pension_and_statutory_contributions_df"
@@ -18617,7 +18617,7 @@
       ],
       "source": [
         "income_statement_df = income_statement.generate_income_statement_template(\n",
-        "    valuation_date=VALUATION_DATE,\n",
+        "    start_date=start_date,\n",
         "    months_to_forecast=MONTHS_TO_FORECAST,\n",
         ")\n",
         "income_statement_df"
@@ -19142,7 +19142,7 @@
         "uncertain_expenses = expenses.calculate_uncertain_expenses(\n",
         "    expenses_uncertain=expenses_uncertain,\n",
         "    other_parameters=other_parameters,\n",
-        "    valuation_date=VALUATION_DATE,\n",
+        "    start_date=start_date,\n",
         "    months_to_forecast=MONTHS_TO_FORECAST,\n",
         ")\n",
         "uncertain_expenses"
@@ -19190,7 +19190,7 @@
         "        provision_for_credit_loss_opening_balances=float(\n",
         "            opening_balances[\"PROVISION_FOR_CREDIT_LOSS\"].iat[0]\n",
         "        ),\n",
-        "        valuation_date=VALUATION_DATE, \n",
+        "        start_date=start_date, \n",
         "        months_to_forecast=MONTHS_TO_FORECAST\n",
         "    )\n",
         ")\n",
@@ -28254,7 +28254,7 @@
       ],
       "source": [
         "direct_cashflow_df = direct_cashflow.generate_direct_cashflow_template(\n",
-        "    valuation_date=VALUATION_DATE, months_to_forecast=MONTHS_TO_FORECAST\n",
+        "    start_date=start_date, months_to_forecast=MONTHS_TO_FORECAST\n",
         ")\n",
         "\n",
         "direct_cashflow_df"
@@ -29165,7 +29165,7 @@
         "tax_schedule = direct_cashflow.generate_tax_schedule(\n",
         "    taxation=income_statement_df.loc[\"Taxation\"],\n",
         "    opening_balance=opening_balances[\"DEFERED_TAXATION\"].iat[0],\n",
-        "    valuation_date=VALUATION_DATE,\n",
+        "    start_date=start_date,\n",
         "    months_to_forecast=MONTHS_TO_FORECAST,\n",
         ")\n",
         "\n",
@@ -29931,7 +29931,7 @@
       "source": [
         "capital_expenses = direct_cashflow.calculate_capital_expenses(\n",
         "    details_of_assets=details_of_assets,\n",
-        "    valuation_date=VALUATION_DATE,\n",
+        "    start_date=start_date,\n",
         "    months_to_forecast=MONTHS_TO_FORECAST,\n",
         ")\n",
         "\n",
@@ -30095,7 +30095,7 @@
         "    direct_cashflow.calculate_long_and_short_term_borrowing_for_direct_cashflow(\n",
         "        details_of_long_term_borrowing=details_of_long_term_borrowing,\n",
         "        details_of_short_term_borrowing=details_of_short_term_borrowing,\n",
-        "        valuation_date=VALUATION_DATE,\n",
+        "        start_date=start_date,\n",
         "        months_to_forecast=MONTHS_TO_FORECAST,\n",
         "    )\n",
         ")\n",
@@ -30883,7 +30883,7 @@
         "    , capital_repayment_new_disbursements_df['total']]\n",
         ")\n",
         "\n",
-        "capital_repayment.loc[helper.generate_columns(VALUATION_DATE,MONTHS_TO_FORECAST)]"
+        "capital_repayment.loc[helper.generate_columns(start_date,MONTHS_TO_FORECAST)]"
       ]
     },
     {
@@ -37103,7 +37103,7 @@
       ],
       "source": [
         "loan_book_df = loan_book.generate_loan_book_template(\n",
-        "    valuation_date=VALUATION_DATE, months_to_forecast=MONTHS_TO_FORECAST\n",
+        "    start_date=start_date, months_to_forecast=MONTHS_TO_FORECAST\n",
         ")\n",
         "loan_book_df"
       ]
@@ -37145,7 +37145,7 @@
       ],
       "source": [
         "capital_repayment_existing_loans = existing_loans_schedules['capital_repayments'].sum()\n",
-        "capital_repayment_existing_loans.loc[helper.generate_columns(VALUATION_DATE,MONTHS_TO_FORECAST)]"
+        "capital_repayment_existing_loans.loc[helper.generate_columns(start_date,MONTHS_TO_FORECAST)]"
       ]
     },
     {
@@ -37180,7 +37180,7 @@
         "total_capital_repayments = loan_book.aggregate_new_and_existing_loans_capital_repayments(\n",
         "    capital_repayments_new_disbursements_df = capital_repayment_new_disbursements_df,\n",
         "    capital_repayments_existing_loans = capital_repayment_existing_loans,\n",
-        "    valuation_date = VALUATION_DATE,\n",
+        "    start_date = start_date,\n",
         "    months_to_forecast = MONTHS_TO_FORECAST,\n",
         ")\n",
         "\n",
@@ -38368,7 +38368,7 @@
       ],
       "source": [
         "balance_sheet_df = balance_sheet.generate_balance_sheet_template(\n",
-        "    valuation_date=VALUATION_DATE,\n",
+        "    start_date=start_date,\n",
         "    months_to_forecast=MONTHS_TO_FORECAST,\n",
         ")\n",
         "\n",
@@ -39553,7 +39553,7 @@
         "    long_and_short_term_borrowing_df=long_and_short_term_borrowing_df,\n",
         "    capital_repayment_on_borrowings_df=short_term_borrowings_schedules['capital_repayments'].sum(),\n",
         "    opening_balances=opening_balances,\n",
-        "    valuation_date=VALUATION_DATE, \n",
+        "    start_date=start_date, \n",
         "    months_to_forecast=MONTHS_TO_FORECAST\n",
         ")\n",
         "\n",
@@ -41577,7 +41577,7 @@
         "    long_and_short_term_borrowing_df=long_and_short_term_borrowing_df,\n",
         "    capital_repayment_on_borrowings_df=long_term_borrowings_schedules['capital_repayments'].sum(),\n",
         "    opening_balances=opening_balances,\n",
-        "    valuation_date=VALUATION_DATE, \n",
+        "    start_date=start_date, \n",
         "    months_to_forecast=MONTHS_TO_FORECAST\n",
         ")\n",
         "\n",
@@ -42602,7 +42602,7 @@
         "    receipts_from_receivables=other_parameters.loc[\"RECEIPTS_FROM_TRADE_RECEIVABLES\"],\n",
         "    new_receivables=other_parameters.loc[\"NEW_TRADE_RECEIVABLES\"],\n",
         "    months_to_forecast=MONTHS_TO_FORECAST,\n",
-        "    valuation_date=VALUATION_DATE,\n",
+        "    start_date=start_date,\n",
         ")\n",
         "\n",
         "other_receivables_schedule = balance_sheet.generate_receivables_schedule(\n",
@@ -42610,7 +42610,7 @@
         "    receipts_from_receivables=other_parameters.loc[\"RECEIPTS_FROM_OTHER_RECEIVABLES\"],\n",
         "    new_receivables=other_parameters.loc[\"NEW_OTHER_RECEIVABLES\"],\n",
         "    months_to_forecast=MONTHS_TO_FORECAST,\n",
-        "    valuation_date=VALUATION_DATE,\n",
+        "    start_date=start_date,\n",
         ")\n",
         "\n",
         "intergroup_receivables_schedule = balance_sheet.generate_receivables_schedule(\n",
@@ -42618,7 +42618,7 @@
         "    receipts_from_receivables=other_parameters.loc[\"RECEIPTS_FROM_INTERGROUP_RECEIVABLES\"],\n",
         "    new_receivables=other_parameters.loc[\"NEW_INTERGROUP_RECEIVABLES\"],\n",
         "    months_to_forecast=MONTHS_TO_FORECAST,\n",
-        "    valuation_date=VALUATION_DATE,\n",
+        "    start_date=start_date,\n",
         ")\n",
         "\n",
         "trade_payables_schedule = balance_sheet.generate_payables_schedule(\n",
@@ -42626,7 +42626,7 @@
         "    payments_to_payables=other_parameters.loc[\"PAYMENTS_TO_TRADE_PAYABLES\"],\n",
         "    new_payables=other_parameters.loc[\"NEW_TRADE_PAYABLES\"],\n",
         "    months_to_forecast=MONTHS_TO_FORECAST,\n",
-        "    valuation_date=VALUATION_DATE,\n",
+        "    start_date=start_date,\n",
         ")\n",
         "\n",
         "other_payables_schedule = balance_sheet.generate_payables_schedule(\n",
@@ -42634,7 +42634,7 @@
         "    payments_to_payables=other_parameters.loc[\"PAYMENTS_TO_OTHER_PAYABLES\"],\n",
         "    new_payables=other_parameters.loc[\"NEW_OTHER_PAYABLES\"],\n",
         "    months_to_forecast=MONTHS_TO_FORECAST,\n",
-        "    valuation_date=VALUATION_DATE,\n",
+        "    start_date=start_date,\n",
         ")\n",
         "\n",
         "\n",
@@ -42795,7 +42795,7 @@
         "    opening_inventories=opening_balances[\"INVENTORIES\"].iat[0],\n",
         "    new_inventories=other_parameters.loc[\"NEW_INVENTORY\"],\n",
         "    inventories_used=other_parameters.loc[\"INVENTORY_USED\"],\n",
-        "    valuation_date=VALUATION_DATE,\n",
+        "    start_date=start_date,\n",
         "    months_to_forecast=MONTHS_TO_FORECAST,\n",
         ")\n",
         "\n",
@@ -44933,7 +44933,7 @@
       "source": [
         "statement_of_cashflow_df = (\n",
         "    statement_of_cashflows.generate_statement_of_cashflow_template(\n",
-        "        VALUATION_DATE, MONTHS_TO_FORECAST\n",
+        "        start_date, MONTHS_TO_FORECAST\n",
         "    )\n",
         ")"
       ]
